--- a/frontend/bejelentkezes.html
+++ b/frontend/bejelentkezes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="main.js" type="module"></script>
     <title>Fejvadász</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
         </ul>
     </nav>
     <article>
-
+        <div class="bejelentkezes"></div>
     </article>
     <footer>Pálóci Ernő $$ Evinger Bónó</footer>
 </body>
