--- a/frontend/bejelentkezes.html
+++ b/frontend/bejelentkezes.html
@@ -12,13 +12,13 @@
     <nav>
         <ul>
             <li>
-                <a href="#">Kezdőlap</a>
+                <a href="index.html">Kezdőlap</a>
             </li>
             <li>
-                <a href="#">Bejelentkezés</a>
+                <a href="bejelentkezes.html">Bejelentkezés</a>
             </li>
             <li>
-                <a href="#">Regisztráció</a>
+                <a href="regisztracio.html">Regisztráció</a>
             </li>
         </ul>
     </nav>
