--- a/frontend/regisztracio.html
+++ b/frontend/regisztracio.html
@@ -1,30 +1,75 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fejvadász</title>
-</head>
-<body>
-    <header>
-        
-    </header>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+    <header></header>
     <nav>
-        <ul>
-            <li>
-                <a href="#">Kezdőlap</a>
-            </li>
-            <li>
-                <a href="#">Bejelentkezés</a>
-            </li>
-            <li>
-                <a href="#">Regisztráció</a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="index.html">Kezdőlap</a>
+        </li>
+        <li>
+          <a href="bejelentkezes.html">Bejelentkezés</a>
+        </li>
+        <li>
+          <a href="regisztracio.html">Regisztráció</a>
+        </li>
+      </ul>
     </nav>
     <article>
+      <form>
+        <div class="mb-3 mt-3">
+          <label for="email" class="form-label"> Felhasználónév: </label>
+          <input
+            type="text"
+            class="form-control"
+            id="felNev"
+            placeholder="felhasználónév"
+            name="felNev"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="pwd" class="form-label"> Jelszó: </label>
+          <input
+            type="password"
+            class="form-control"
+            id="pwd"
+            placeholder="jelszó"
+            name="pwd"
+          />
+        </div>
+        <div class="mb-3">
+            <label for="pwd" class="form-label"> Jelszó megerősítése: </label>
+            <input
+              type="password"
+              class="form-control"
+              id="pwduj"
+              placeholder="jelszó megerősítése"
+              name="pwduj"
+            />
+          </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary w-100">Login</button>
 
+          <p>
+            Már van felhasználóneve?
+            <a class="nav-link text-info" href="/bejelentkezes">
+              Bejelentkezés
+            </a>
+          </p>
+        </div>
+      </form>
     </article>
     <footer>Pálóci Ernő $$ Evinger Bónó</footer>
-</body>
+  </body>
 </html>
