--- a/frontend/bejelentkezes.html
+++ b/frontend/bejelentkezes.html
@@ -7,22 +7,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="main.js" type="module"></script>
+    <link rel="stylesheet" href="alapstilus.css">
     <title>Fejvadász</title>
 </head>
 <body>
     <header>
         
     </header>
-    <nav>
-        <ul>
-            <li>
-                <a href="#">Kezdőlap</a>
+    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Kezdőlap</a>
             </li>
-            <li>
-                <a href="#">Bejelentkezés</a>
+            <li class="nav-item"> 
+                <a class="nav-link" href="#">Bejelentkezés</a>
             </li>
-            <li>
-                <a href="#">Regisztráció</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Regisztráció</a>
             </li>
         </ul>
     </nav>
