--- a/frontend/regisztracio.html
+++ b/frontend/regisztracio.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fejvadász</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="main.js" type="module"></script>
   </head>
   <body>
     <header></header>
@@ -27,48 +25,7 @@
       </ul>
     </nav>
     <article>
-      <form>
-        <div class="mb-3 mt-3">
-          <label for="email" class="form-label"> Felhasználónév: </label>
-          <input
-            type="text"
-            class="form-control"
-            id="felNev"
-            placeholder="felhasználónév"
-            name="felNev"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="pwd" class="form-label"> Jelszó: </label>
-          <input
-            type="password"
-            class="form-control"
-            id="pwd"
-            placeholder="jelszó"
-            name="pwd"
-          />
-        </div>
-        <div class="mb-3">
-            <label for="pwd" class="form-label"> Jelszó megerősítése: </label>
-            <input
-              type="password"
-              class="form-control"
-              id="pwduj"
-              placeholder="jelszó megerősítése"
-              name="pwduj"
-            />
-          </div>
-        <div class="text-center">
-          <button type="submit" class="btn btn-primary w-100">Login</button>
-
-          <p>
-            Már van felhasználóneve?
-            <a class="nav-link text-info" href="/bejelentkezes">
-              Bejelentkezés
-            </a>
-          </p>
-        </div>
-      </form>
+      <div class="regisztracio"></div>
     </article>
     <footer>Pálóci Ernő $$ Evinger Bónó</footer>
   </body>
