--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,9 @@
         </ul>
     </nav>
     <article>
-
+        <div class="diakok"></div>
+        <div class="cegek"></div>
+        <div class="cdKapcsolat"></div>
     </article>
     <footer>Pálóci Ernő $$ Evinger Bónó</footer>
 </body>
