--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="main.js" type="module"></script>
+    <link rel="stylesheet" href="alapstilus.css">
     <title>Fejvadász</title>
 </head>
 <body>
