--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="alapstilus.css">
+    <link rel="stylesheet" href="alapstilus.css" />
     <script src="main.js" type="module"></script>
-    <link rel="stylesheet" href="alapstilus.css">
+    <link rel="stylesheet" href="alapstilus.css" />
     <title>Fejvadász</title>
-</head>
-<body>
-    <header>
-        
-    </header>
+  </head>
+  <body>
+    <header></header>
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Kezdőlap</a>
-            </li>
-            <li class="nav-item"> 
-                <a class="nav-link" href="bejelentkezes.html">Bejelentkezés</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="regisztracio.html">Regisztráció</a>
-            </li>
-        </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="bejelentkezes.html">Bejelentkezés</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="regisztracio.html">Regisztráció</a>
+        </li>
+      </ul>
     </nav>
     <article>
-        <div class="diakok">
-            <div class="diakTablazat"></div>
-        </div>
-        <div class="cegek">
-
-        </div>
-        <div class="cdKapcsolat"></div>
+      <div class="diakok">
+        <div class="diakTablazat"></div>
+      </div>
+      <div class="cegek"></div>
+      <div class="cdKapcsolat"></div>
     </article>
     <footer></footer>
-</body>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", (event) => {
+        let navItem = document.querySelector(".navbar-nav");
+        if (localStorage.getItem("bejelentkezett") === "true") {
+          navItem.innerHTML = `
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Kezdőlap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="kijelentkezes">Kijelentkezés</a>
+                    </li>`;
+
+          document.getElementById("kijelentkezes").addEventListener("click", function (event) {
+              event.preventDefault();
+              localStorage.removeItem("bejelentkezett");
+              window.location.href = "bejelentkezes.html";
+            });
+        } else {
+          navItem.innerHTML = `
+                    <li class="nav-item">
+                        <a class="nav-link" href="bejelentkezes.html">Bejelentkezés</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="regisztracio.html">Regisztráció</a>
+                    </li>`;
+        }
+      });
+    </script>
+  </body>
 </html>
