CegProfil, Preferalt api keres

--- a/frontend/cegProfil.html
+++ b/frontend/cegProfil.html
@@ -10,27 +10,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="diak_ceg_main.js" type="module"></script>
-    <link rel="stylesheet" href="diakCegForm.css" />
-    <title>Regisztráció</title>
+    <script src="main.js" type="module"></script>
+    <link rel="stylesheet" href="diakProfil.css" />
+    <title>Fejvadász</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <main>
+      <header></header>
+      <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="bejelentkezes.html">Bejelentkezés</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="regisztracio.html">Regisztráció</a>
+            <a class="nav-link" href="index.html">Kezdőlap</a>
           </li>
         </ul>
       </nav>
-    <main>
-      <header></header>
-      
       <article>
-        <div class="ceg"></div>
+        <div class="cegProfil"></div>
       </article>
       <footer></footer>
     </main>
