--- a/frontend/diak.html
+++ b/frontend/diak.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="diak_ceg_main.js" type="module"></script>
-  
-    <title>Fejvadász</title>
-</head>
-<body>
-    <header>
-        
-    </header>
+    <link rel="stylesheet" href="diakCegForm.css" />
+    <title>Regisztráció</title>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Kezdőlap</a>
-            </li>
-            <li class="nav-item"> 
-                <a class="nav-link" href="bejelentkezes.html">Bejelentkezés</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="regisztracio.html">Regisztráció</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="bejelentkezes.html">Bejelentkezés</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="regisztracio.html">Regisztráció</a>
+          </li>
         </ul>
-    </nav>
-    <article>
+      </nav>
+    <main>
+      <header></header>
+      <article>
         <div class="diak"></div>
-    </article>
-    <footer>Pálóci Ernő $$ Evinger Bónó</footer>
-</body>
+      </article>
+      <footer></footer>
+    </main>
+  </body>
 </html>
