--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,12 +10,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="alapstilus.css" />
     <script src="main.js" type="module"></script>
     <link rel="stylesheet" href="alapstilus.css" />
     <title>Fejvadász</title>
   </head>
-  <body>
+  <body class="p-3">
     <header></header>
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
       <ul class="navbar-nav">
@@ -31,7 +30,9 @@
       <div class="diakok">
         <div class="diakTablazat"></div>
       </div>
-      <div class="cegek"></div>
+      <div class="cegek">
+        <div class="cegekTablazat"></div>
+      </div>
       <div class="cdKapcsolat"></div>
     </article>
     <footer></footer>
