--- a/frontend/regisztracio.html
+++ b/frontend/regisztracio.html
@@ -3,28 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="main.js" type="module"></script>
+    <link rel="stylesheet" href="alapstilus.css" />
     <title>Fejvadász</title>
   </head>
   <body>
-    <header></header>
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+      <nav class="navbar navbar-expand-sm bg-primary navbar-dark ">
         <ul class="navbar-nav">
-            <li class="nav-item"> 
-                <a class="nav-link" href="bejelentkezes.html">Bejelentkezés</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="regisztracio.html">Regisztráció</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="bejelentkezes.html">Bejelentkezés</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="regisztracio.html">Regisztráció</a>
+          </li>
         </ul>
-    </nav>
-    <article>
-      <div class="regisztracio"></div>
-    </article>
-    <footer>Pálóci Ernő $$ Evinger Bónó</footer>
+      </nav>
+    <main>
+      <header></header>
+      <article>
+        <div class="regisztracio"></div>
+      </article>
+      <footer></footer>
+    </main>
   </body>
 </html>
