media() css Preferált cég táblázat Admin oldal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,7 @@
         <div class="cegekTablazat"></div>
       </div>
       <div class="cdKapcsolat"></div>
+      <div class="preferaltCeg"></div>
     </article>
     <footer></footer>
 
