Diák, Cég adatok szerkesztés, Preferált cég szűrés

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,16 @@
       </ul>
     </nav>
     <article>
+      <div class="offcanvas offcanvas-start" id="demo">
+        <div class="offcanvas-header">
+          <h1 class="offcanvas-title">Szerkesztés</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+        
+          
+        </div>
+      </div>
       <div class="diakok">
         <div class="diakTablazat"></div>
       </div>
