--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,8 +51,9 @@
       <div class="cegek">
         <div class="cegekTablazat"></div>
       </div>
-      <div class="cdKapcsolat"></div>
       <div class="preferaltCeg"></div>
+      <div class="kovetelmeny"></div>
+      <div class="cdKapcsolat"></div>
     </article>
     <footer></footer>
 
